<resources>
    <string name="app_name">swim_zad_2_b</string>
    <string name="hello">Zad 2 b) Igor Czeczot</string>
    <string name="theme1">Theme 1</string>
    <string name="theme2">Theme 2</string>
    <string name="theme3">Theme 3</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="list">List</string>
</resources>
